<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="Nminutes">
        
        <item quantity="one">1분</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>분</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1분</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>분</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1시간</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>시간</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1일</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>일</item>
    </plurals>
    <plurals name="weekN">
        
        <item quantity="other">week <xliff:g id="count">%d</xliff:g>번째 주</item>
    </plurals>
    <plurals name="endByCount">
        <item quantity="one">, 일회성</item>
        <item quantity="other">, <xliff:g id="number">%d</xliff:g>회</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">매일</item>
        <item quantity="other"><xliff:g id="number">%d</xliff:g>일에 한 번</item>
    </plurals>
    <plurals name="weekly">
        <item quantity="one">매주 <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other"><xliff:g id="number">%1$d</xliff:g>주에 한 번 <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <plurals name="month_more_events">
        
        <item quantity="one">"+1"</item>
        
        <item quantity="other">+<xliff:g id="number">%d</xliff:g></item>
    </plurals>
    <plurals name="Nevents">
        
        <item quantity="one">일정 1개</item>
        
        <item quantity="other">일정 <xliff:g id="count">%d</xliff:g>개</item>
    </plurals>
    <plurals name="N_remaining_events">
        
        <item quantity="one">남은 일정 1개</item>
        
        <item quantity="other">남은 일정 <xliff:g id="count">%d</xliff:g>개</item>
    </plurals>
    <plurals name="recurrence_interval_daily">
        
        <item quantity="one"><xliff:g id="count">%d</xliff:g>일에 한 번</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>일에 한 번</item>
    </plurals>
    <plurals name="recurrence_interval_weekly">
        
        <item quantity="one"><xliff:g id="count">%d</xliff:g>주에 한 번</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>주에 한 번</item>
    </plurals>
    <plurals name="recurrence_interval_monthly">
        
        <item quantity="one"><xliff:g id="count">%d</xliff:g>개월에 한 번</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>개월에 한 번</item>
    </plurals>
    <plurals name="recurrence_interval_yearly">
        
        <item quantity="one"><xliff:g id="count">%d</xliff:g>년에 한 번</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g>년에 한 번</item>
    </plurals>
    <plurals name="recurrence_end_count">
        <item quantity="one"><xliff:g id="event_count">%d</xliff:g>개의 이벤트</item>
        <item quantity="other"><xliff:g id="event_count">%d</xliff:g>개의 이벤트</item>
    </plurals>
    <string name="group_hint_name">그룹명</string>
    <string name="group_color">그룹 색상</string>
    <string name="diary_hint_title">일기 제목</string>
    <string name="diary_hint_content">내용을 작성하세요.</string>
    <string name="diary_color">레이블 색상</string>
    <string name="diary_picture">사진 추가</string>
    <string name="diary_location_origin">장소</string>
    <string name="pw_hint1">비밀번호</string>
    <string name="pw_hint2">비밀번호(8자 이상 20자 이하)</string>
    <string name="button_login">로그인</string>
    <string name="button_sign">회원가입</string>
    <string name="sign">아직 회원이 아니신가요?</string>
    <string name="login">이미 회원이신가요?</string>
    <string name="complete">완료(테스트)</string>
    <string name="error">오류!</string>
    <string name="pw">비밀번호 찾기</string>
    <string name="pw_complete">비밀번호를 찾으셨나요?</string>
    <string name="dialog_cancel">닫기</string>
    <string name="dialog_message">\n로그인을 5회 실패하여 계정이 잠겼습니다.\n전송된 인증 메일을 확인해주세요.</string>
    <string name="close_app">\'뒤로\' 버튼 한번 더 누르시면 종료됩니다.</string>
    <string name="join_success">그룹에 가입되었습니다.</string>
    <string name="join_fail">그룹 가입 처리 중 오류가 발생하였습니다.</string>
    <string name="today_event">"오늘의 일정"</string>
    <string name="today_diary">"오늘의 일기"</string>
    <string name="today_no_event">"여기를 클릭해서 오늘의 일정을 등록하세요!"</string>
    <string name="today_no_diary">"여기를 클릭해서 오늘의 일기를 등록하세요!"</string>
    <string name="group_event">"다가오는 일정"</string>
    <string name="group_diary">"최근 등록된 일기"</string>
    <string name="group_history">"그룹 히스토리"</string>
    <string name="more">" > 전체 보기"</string>
    <string name="email_error">이메일을 바르게 입력하세요.</string>
    <string name="pw_error">비밀번호를 바르게 입력하세요.</string>
    <string name="login_error">이메일 또는 비밀번호가 맞지 않습니다.</string>
    <string name="signup_fail">회원가입 중 문제가 발생했습니다.</string>
    <string name="email_exist">이미 가입된 이메일입니다.</string>
    <string name="email_diff">가입되지 않은 이메일입니다.</string>
    <string name="pw_diff">비밀번호가 맞지 않습니다.</string>
    <string name="pw_out">로그인을 5회 실패하여 계정이 잠겼습니다.\n이메일 인증 후 다시 로그인 해주세요.</string>
    <string name="login_fail">로그인 중 문제가 발생했습니다.</string>
    <string name="pw_fail">비밀번호 찾기 중 문제가 발생했습니다.</string>
    <string name="pw_send">임시 비밀번호를 메일로 보냈습니다.</string>
    <string name="pw_unvalid">인증되지 않은 이메일입니다.\n관리자에게 문의하세요.</string>
    <string name="no_internet">서버와의 통신에 실패했습니다. 인터넷 연결을 확인하세요.</string>
    <string name="TEAL">#388d7f</string>
    <string name="ORANGE">#b36f28</string>
    <string name="BLUE">#365db7</string>
    <string name="GREEN">#30a320</string>
    <string name="RED">#9c2513</string>
    <string name="PURPLE">#862297</string>
    <string name="title_activity_welcome">나날 캘린더</string>
    <string name="next">다음</string>
    <string name="skip">스킵</string>
    <string name="start">시작할까요?</string>
    <string name="slide_1_title">매일 하루에 하나씩</string>
    <string name="slide_1_desc">서버에 자동 저장되는 오늘의 일기를 작성해 보세요!</string>
    <string name="slide_2_title">오늘의 일정을 간편하게</string>
    <string name="slide_2_desc">오늘의 일정과 일기를 한눈에 확인하세요!</string>
    <string name="slide_3_title">가족, 친구들과 함께</string>
    <string name="slide_3_desc">그룹에 가입해서 일정과 일기를 공유해 보세요!</string>
    <string name="slide_4_title">웹에서도 편리하게</string>
    <string name="slide_4_desc">웹 사이트에서도 이용해 보세요!</string>
    <string name="menu_calendar">캘린더</string>
    <string name="menu_today">오늘</string>
    <string name="menu_group">그룹</string>
    <string name="menu_settings">설정</string>
    <string name="hint_time_zone_search">국가 입력</string>
    <string name="searchview_description_clear">검색어 삭제</string>
    <string name="no_results_found">검색결과 없음</string>
    <string name="palestine_display_name">팔레스타인</string>
    <string name="more_string"><xliff:g id="count">%1$d</xliff:g>명 이상</string>
    <string name="copy_email">이메일 주소 복사</string>
    <string name="copy_number">전화번호 복사</string>
    <string name="action_label">Return</string>
    <string name="accessbility_suggestion_dropdown_opened">추천 연락처 열림</string>
    <string name="accessbility_suggestion_dropdown_closed">제안사항이 없습니다.</string>
    <string name="dropdown_delete_button_desc">수신자에서 <xliff:g id="contact">%s</xliff:g> 삭제</string>
    <string name="chips_action_copy">복사</string>
    <string name="chips_action_cancel">취소</string>
    <string name="chips_permission_text">주소록 제안 허용</string>
    <string name="done_label">완료</string>
    <string name="hour_picker_description">시간 원형 슬라이더</string>
    <string name="minute_picker_description">분 원형 슬라이더</string>
    <string name="select_hours">시간 선택</string>
    <string name="select_minutes">분 선택</string>
    <string name="day_picker_description">월별 바둑판식 날짜 표시</string>
    <string name="year_picker_description">년</string>
    <string name="select_day">월/일 선택</string>
    <string name="select_year">연도 선택</string>
    <string name="item_is_selected"><xliff:g example="2013" id="item">%1$s</xliff:g>이(가) 선택됨</string>
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> 삭제됨</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>
    <string name="starting_alert_service">StartingAlertService</string>
    <string name="standalone_app_label" translatable="false">나날</string>
    <string name="app_label">캘린더</string>
    <string name="what_label">내용</string>
    <string name="where_label">장소</string>
    <string name="when_label">일시</string>
    <string name="timezone_label">시간대</string>
    <string name="attendees_label">참석자</string>
    <string name="today">오늘</string>
    <string name="tomorrow">내일</string>
    <string name="today_at_time_fmt">"오늘 <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"내일 <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="date">%s</xliff:g>, <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="repeats_label">반복</string>
    <string name="no_title_label">(제목 없음)</string>
    <string name="no_content_label">(내용 없음)</string>
    <string name="calendar_refresh">"새로고침"</string>
    <string name="show_day_view">"요일 표시"</string>
    <string name="agenda_view">"일정목록"</string>
    <string name="day_view">"일"</string>
    <string name="week_view">"주"</string>
    <string name="month_view">"월"</string>
    <string name="today_view">"오늘"</string>
    <string name="group_view">"그룹"</string>
    <string name="event_view">"일정 보기"</string>
    <string name="event_create">"새 일정"</string>
    <string name="event_edit">"일정 수정"</string>
    <string name="event_delete">"일정 삭제"</string>
    <string name="diary_create">"일기 작성"</string>
    <string name="diary_edit">"일기 수정"</string>
    <string name="diary_delete">"일기 삭제"</string>
    <string name="group_create">"그룹 생성"</string>
    <string name="group_edit">"그룹 수정"</string>
    <string name="group_detail">"그룹 상세보기"</string>
    <string name="group_delete">"그룹 삭제"</string>
    <string name="share_label">공유</string>
    <string name="goto_today">"오늘"</string>
    <string name="goto_date">"날짜 이동…"</string>
    <string name="menu_preferences">"설정"</string>
    <string name="menu_select_visible_calendars">"표시할 캘린더"</string>
    <string name="search">"검색"</string>
    <string name="hide_controls">"컨트롤 숨기기"</string>
    <string name="show_controls">"컨트롤 표시"</string>
    <string name="view_settings">"보기 설정"</string>
    <string name="menu_logout">로그아웃</string>
    <string name="select_visible_calendars_title">"표시할 캘린더"</string>
    <string name="synced">동기화됨</string>
    <string name="not_synced">동기화 안됨</string>
    <string name="acct_not_synced">계정이 동기화되지 않아 캘린더의 상태가 최신이 아닐 수 있습니다.</string>
    <string name="accounts">계정 및 동기화</string>
    <string name="select_synced_calendars_title">동기화할 캘린더</string>
    <string name="select_synced_calendars_button">동기화할 캘린더</string>
    <string name="hint_what">"일정 이름"</string>
    <string name="hint_where">"장소"</string>
    <string name="hint_description">"일정 설명"</string>
    <string name="hint_attendees">"참석자 추가"</string>
    <string name="hint_title">"일기 제목"</string>
    <string name="hint_content">"일기 내용"</string>
    <string name="creating_event">"일정을 만들었습니다."</string>
    <string name="saving_event">"일정을 저장했습니다."</string>
    <string name="empty_event">"빈 일정은 만들 수 없습니다."</string>
    <string name="creating_event_with_guest">"초대장이 전송됩니다."</string>
</resources>