<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/day_menu_item"
            android:checked="true"
            android:icon="@drawable/ic_menu_day_view"
            android:title="@string/day_view" />
        <item
            android:id="@+id/week_menu_item"
            android:icon="@drawable/ic_menu_week_view"
            android:title="@string/week_view" />
        <item
            android:id="@+id/month_menu_item"
            android:icon="@drawable/ic_menu_month_view"
            android:title="@string/month_view" />

        <item
            android:id="@+id/agenda_menu_item"
            android:icon="@drawable/ic_menu_agenda_view"
            android:title="@string/agenda_view" />

    </group>
    <group android:id="@+id/navigation_subheader" android:checkableBehavior="none">
        <item
            android:id="@+id/action_select_visible_calendars"
            android:icon="@drawable/ic_menu_select_visible_calendars"
            android:title="@string/menu_select_visible_calendars" />
        <item
            android:id="@+id/action_settings"
            android:alphabeticShortcut="s"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_preferences" />

        <item
            android:id="@+id/test"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/test2"
            android:icon="@drawable/ic_add_event"
            android:title="계정 생성"   />
        <item
            android:id="@+id/test3"
            android:icon="@drawable/ic_cancel_wht_24dp"
            android:title="계정 삭제"   />
    </group>
</menu>
